--- a/templates/media/Message_template_for_Problem_Recovery.html
+++ b/templates/media/Message_template_for_Problem_Recovery.html
@@ -80,7 +80,7 @@
                     <tr>
                         <td style="padding: 12px; text-align: center;">
                             <p style="margin: 0; font-size: 11px; color: #A0AEC0;">
-                                <strong>Zabbix Monitoring</strong> | Product Support Team
+                                <strong>Zabbix Monitoring</strong> | IMS
                             </p>
                         </td>
                     </tr>
