Update footer text in problem update message template

--- a/templates/media/Message_template_for_Problem_Update.html
+++ b/templates/media/Message_template_for_Problem_Update.html
@@ -79,7 +79,7 @@
                 </table>
 
                 <p style="margin: 20px 0 0 0; font-size: 11px; color: #94A3B8; text-align: center; text-transform: uppercase; letter-spacing: 1px;">
-                    Zabbix Monitoring &bull; Product Support Operations
+                    Zabbix Monitoring &bull; IMS
                 </p>
             </td>
         </tr>
